# application-strategist

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  sample_job.txt  sample_resume.md
.cursor/plans/: add_openai_api_support_ce79c65d.plan.md  cursor_openai_api_support_and_code_exte.md  cursor_openai_api_support_and_code_exte_2026_03_01.md  job_search_cli_v1_2572fbf7.plan.md
src/app_strategist/: __init__.py  config.py  main.py  utils.py
src/app_strategist/graph/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/app_strategist/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/app_strategist/mcp_server/: __init__.py  resume_validator.py
src/app_strategist/models/: __init__.py  evaluation.py  requirements.py  scoring.py  session.py
src/app_strategist/parsers/: __init__.py  base.py  registry.py  text_parser.py
src/app_strategist/rendering/: __init__.py  audit_trail.py  console.py
src/app_strategist/services/: __init__.py  analysis.py  candidate_scorer.py  employer_scorer.py  extractor.py  orchestrator.py  requirement_extractor.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_utils.py
tests/test_graph/: test_graph.py  test_nodes.py
tests/test_llm/: test_providers.py
tests/test_models/: test_evaluation.py  test_scoring.py  test_session.py
tests/test_parsers/: test_registry.py  test_text_parser.py
tests/test_services/: test_analysis.py  test_candidate_scorer.py  test_employer_scorer.py
